# Aurelius-Protocol

./: .dockerignore  .env.example  .env.example.finney  .env.example.test  .env.testnet  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DOCKER.md  Dockerfile  Dockerfile.node  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  miner.py  pyproject.toml  test_new_scoring.py  validator.py
.github/workflows/: ci.yml  docker-publish.yml  prune-ghcr.yml
aurelius/: __init__.py  config.py  protocol.py
aurelius/benchmark/: config.py  evaluate.py  finetune.py  influence.py  labeling.py  retrain.py
aurelius/cli/: deposit.py
aurelius/common/: __init__.py  central_api.py  constants.py  embeddings.py  enums.py  multisig.py  schema.py  schema_v1.json  types.py  version.py
aurelius/common/classifier/: __init__.py  features.py  model.py  train.py
aurelius/common/llm/: __init__.py  base.py  factory.py  (+1 more)
aurelius/miner/: __init__.py  config_store.py  dashboard.py  errors.py  health.py  history.py  miner.py  pull_handler.py  registration.py  retry.py  validator_preferences.py  work_token.py
aurelius/shared/: __init__.py  chat_client.py  circuit_breaker.py  config.py  consensus.py  dataset_logger.py  embedding_client.py  experiment_client.py  moderation.py  novelty_client.py  protocol.py  rate_limiter.py  remote_config_client.py  scoring.py  simulated_subtensor.py  submission_client.py  validator_trust.py  wallet_detector.py
aurelius/simulation/: Dockerfile.concordia  coherence.py  concordia_types.py  docker_runner.py  entrypoint.py  transcript.py  translator.py
aurelius/tools/: seed_generator.py  seed_labeler.py
aurelius/validator/: __init__.py  api_client.py  doctor.py  local_queue.py  pipeline.py  rate_limiter.py  remote_config.py  validator.py
concordia/: entrypoint.py
data/: seed_dataset.jsonl
deployment/: .gitignore  DEPLOYMENT_SUMMARY.md  README.md  change-remote-password.sh  deploy.sh  fix-password.sh
scripts/: deploy-testnet.sh  generate-env.sh  generate_seed_data.py  quickstart.sh  register_experiment_staging.py  register_testnet.py  run_benchmark_pipeline.py  seed-testlab-balances.sh  setup-testlab.sh  test-e2e-pipeline.sh  test-gap-features.sh  test-work-id-signature.py
tests/: conftest.py  test_assertions_classifier.py  test_assertions_content_identity.py  test_assertions_degraded_mode.py  test_assertions_general.py  test_assertions_novelty.py  test_assertions_pipeline_ordering.py  test_assertions_rate_limiting.py  test_assertions_remote_config.py  test_assertions_schema.py  test_assertions_simulation.py  test_assertions_versioning.py  test_assertions_weights.py  test_assertions_work_token.py  test_chat_fallback.py  test_config_defaults.py  test_experiment_client.py  test_experiment_routing.py  test_miner_registration.py  test_moral_experiment.py  test_moral_judge.py  test_moral_signals.py  test_novelty_client.py  test_per_experiment_rate_limiter.py  test_protocol.py  test_remote_config.py  test_reward_allocation.py  test_security_hardening.py  test_strictness.py
tests/benchmark/: test_config.py  test_evaluate.py  test_finetune.py  test_influence.py  test_labeling.py  test_retrain.py
tests/cli/: test_deposit.py
tests/common/: test_central_api.py  test_classifier.py  test_embeddings.py  test_multisig.py  test_schema.py  test_types.py  test_version.py  test_weight_computation.py
tests/compat/: test_forward_compat.py
tests/e2e/: __init__.py  conftest.py  test_collector_integration.py  test_concurrent_operations.py  test_data_boundaries.py  test_data_isolation.py  test_error_resilience.py  test_full_pipeline.py  test_metagraph_sync.py  test_novelty_flow.py  test_registration.py  test_signature_edge_cases.py  test_telemetry_flow.py
tests/integration/: test_moral_reasoning.py  test_multi_experiment.py  test_per_experiment_novelty.py
tests/miner/: test_config_store.py  test_work_token.py
tests/simulation/: test_coherence.py  test_docker_runner.py  test_docker_runner_config.py  test_llm_factory.py  test_transcript.py  test_translator.py
tests/validator/: test_config.py  test_cycle_summary.py  test_doctor.py  test_local_queue.py  test_local_queue_config.py  test_log_hygiene.py  test_pipeline.py  test_ramp_up_anchor.py  test_rate_limiter.py  test_remote_config.py  test_remote_config_enhanced.py  test_remote_config_merge.py  test_results_retention.py  test_self_validation.py
(+35 files in other folders)
