[project]
name = "aurelius-protocol"
version = "0.1.0"
description = "Bittensor subnet for AI alignment research - includes both validator and miner"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Aurelius Protocol"}
]
keywords = ["bittensor", "subnet", "alignment", "adversarial", "ai-safety", "validator", "miner"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "bittensor>=6.9.0",
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "types-requests",
    "types-pyyaml",
]

[project.urls]
Homepage = "https://github.com/Aurelius-Protocol/Aurelius-Protocol"
Repository = "https://github.com/Aurelius-Protocol/Aurelius-Protocol"

[project.scripts]
aurelius-validator = "aurelius.validator.validator:main"
aurelius-miner = "aurelius.miner.miner:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["aurelius*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov=aurelius",
    "--cov-report=term-missing",
]
markers = [
    "e2e: mark test as end-to-end integration test",
    "slow: mark test as slow (involves network operations)",
    "requires_registration: mark test as requiring validator registration",
    "requires_docker: mark test as requiring Docker services",
    "stress: mark test as stress test (high load)",
    "security: mark test as security-related",
    "boundary: mark test as boundary/edge case test",
    "onchain: tests that interact with real blockchain",
    "requires_funding: tests that need funded wallets",
]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "bittensor.*",
    "openai.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["aurelius"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
